# src/server.js
@@ -1,6 +1,7 @@
 require('dotenv').config();
 
 const express = require('express');
+const cors = require('cors');
 const swaggerUi = require('swagger-ui-express');
 
 const { connectDatabase } = require('./infrastructure/database/connection');
@@ -8,12 +9,14 @@ const logger = require('./infrastructure/logging/logger');
 const swaggerSpec = require('./infrastructure/swagger/swaggerConfig');
 const errorHandler = require('./interfaces/http/middlewares/errorHandler');
 const postRoutes = require('./interfaces/http/routes/postRoutes');
+const authRoutes = require('./interfaces/http/routes/authRoutes');
 const healthRoutes = require('./interfaces/http/routes/healthRoutes');
 
 const app = express();
 const PORT = process.env.PORT || 3000;
 
 // Middleware
+app.use(cors());
 app.use(express.json());
 
 // Request logging middleware
@@ -30,6 +33,7 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 
 // Routes
 app.use('/health', healthRoutes);
+app.use('/auth', authRoutes);
 app.use('/posts', postRoutes);
 
 // 404 handler
